--- a/part_1.ipynb
+++ b/part_1.ipynb
@@ -2315,9 +2315,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "88a58cff-e6d6-4b58-a66e-24e5f880e3d6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Save the model\n",
